--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,16 @@ services:
   data:
     image: tianon/true
     volumes:
-      - ".:/var/www"
+      - ".:/var/www/html"
+      - "./docker/nginx/vhost.conf:/etc/nginx/conf.d/default.conf"
+      - "./docker/php/override.ini:/usr/local/etc/php/conf.d/99-override.ini"
       - "./data/db:/var/lib/mysql"
       - "./data/redis:/var/lib/redis"
-      - "./conf/nginx.conf:/etc/nginx/conf.d/default.conf"
-      - "./logs/nginx:/var/logs/nginx"
-      - "./logs/php:/var/logs/php"
-
+      - "./logs/nginx:/var/log/nginx"
+      - "./logs/php:/var/log/php"
+      - "./logs/mysql:/var/log/mysql"
   db:
-    image: mysql
+    image: mysql:5.7
     ports:
       - 3306:3306
     volumes_from:
@@ -24,7 +25,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
 
   nginx:
-    image: nginx
+    image: nginx:alpine
     ports:
       - 80:80
     links:
@@ -33,17 +34,24 @@ services:
       - data
 
   php:
-    image: phpdockerio/php71-fpm
+    build: docker/php
     ports:
       - 9000:9000
     links:
       - db
+      - mail
     volumes_from:
       - data
 
   redis:
-    image: redis
+    image: redis:alpine
     ports:
       - 6379:6379
     volumes_from:
       - data
+
+  mail:
+    image: mailhog/mailhog
+    ports:
+      - 1025:1025
+      - 8025:8025
