--- a/docker/nginx/vhost.conf
+++ b/docker/nginx/vhost.conf
@@ -1,7 +1,7 @@
 server {
     listen 80 default;
 
-    root /var/www;
+    root /var/www/html;
     index index.php index.html index.html
 
     server_name _;
