--- a/docker/php/override.ini
+++ b/docker/php/override.ini
@@ -1,6 +1,12 @@
 cgi.fix_pathinfo = 0
+
 date.timezone = 'UTC'
+
+memory_limit = 512M
+
+upload_max_filesize = 100M
+post_max_size = 100M
+max_file_uploads = 200
+
 short_open_tag = Off
 magic_quotes_gpc = Off
-smtp = 'mail'
-smtp_port = 1025
