--- a/docker/php/override.ini
+++ b/docker/php/override.ini
@@ -10,3 +10,5 @@ max_file_uploads = 200
 
 short_open_tag = Off
 magic_quotes_gpc = Off
+
+sendmail_path = "/usr/local/bin/mhsendmail --smtp-addr='mail:1025' --from='gotcha@mail.local' -t"
