--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,16 @@ services:
   data:
     image: tianon/true
     volumes:
-      - ".:/var/www/html"
-      - "./docker/nginx/vhost.conf:/etc/nginx/conf.d/default.conf"
-      - "./docker/php/override.ini:/usr/local/etc/php/conf.d/99-override.ini"
-      - "./data/db:/var/lib/mysql"
-      - "./data/redis:/var/lib/redis"
-      - "./logs/nginx:/var/log/nginx"
-      - "./logs/php:/var/log/php"
-      - "./logs/mysql:/var/log/mysql"
+      - ".:/var/www/html:rw"
+      - "./docker/nginx/vhost.conf:/etc/nginx/conf.d/default.conf:ro"
+      - "./docker/php/override.ini:/usr/local/etc/php/conf.d/99-override.ini:ro"
+      - "./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro"
+      - "./data/db:/var/lib/mysql:rw"
+      - "./data/redis:/var/lib/redis:rw"
+      - "./logs/nginx:/var/log/nginx:rw"
+      - "./logs/php:/var/log/php:rw"
+      - "./logs/mysql:/var/log/mysql:rw"
+
   db:
     image: mysql:5.7
     ports:
