--- a/docker/php/override.ini
+++ b/docker/php/override.ini
@@ -12,3 +12,14 @@ short_open_tag = Off
 magic_quotes_gpc = Off
 
 sendmail_path = "/usr/local/bin/mhsendmail --smtp-addr='mail:1025' --from='gotcha@mail.local' -t"
+
+opcache.enable=1
+opcache.enable_cli=1
+opcache.max_accelerated_files=7963
+opcache.memory_consumption=192
+opcache.interned_strings_buffer=16
+opcache.max_wasted_percentage=10
+
+; for production next two should be 0
+opcache.revalidate_freq=1
+opcache.validate_timestamps=1
