--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,8 @@ services:
     volumes_from:
       - data
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: docker-sandbox
 
   nginx:
     image: nginx:alpine
